// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`UseTemplateDialog rendering tests mode fields-form - hasFeilds false - test 1`] = `
<div>
  <div
    data-slot="dialog"
    data-testid="use-template-dialog"
  >
    <div
      data-slot="dialog-portal"
      data-testid="mock-react-dialog-portal"
    >
      <div
        class="data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 fixed inset-0 z-50 bg-black/50"
        data-slot="dialog-overlay"
        data-testid="mock-react-dialog-overlay"
      />
      <div
        class="bg-background data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 fixed top-[50%] left-[50%] z-50 w-full max-w-[calc(100%-2rem)] translate-x-[-50%] translate-y-[-50%] rounded-lg border shadow-lg flex flex-col gap-0 overflow-hidden p-0 transition-all duration-200 max-h-[90vh] sm:max-w-5xl"
        data-slot="dialog-content"
        data-testid="mock-react-dialog-content"
      >
        <button
          class="absolute top-4 right-12 cursor-pointer rounded-sm bg-background px-2 py-2 hover:bg-accent"
          data-testid="expand-btn"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-maximize2 lucide-maximize-2 h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 3h6v6"
            />
            <path
              d="m21 3-7 7"
            />
            <path
              d="m3 21 7-7"
            />
            <path
              d="M9 21H3v-6"
            />
          </svg>
        </button>
        <button
          class="absolute top-4 right-4 cursor-pointer rounded-sm bg-background px-2 py-2 hover:bg-accent"
          data-testid="close-btn"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-x h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
        </button>
        <div
          class="flex flex-col gap-2 text-center sm:text-left shrink-0 px-6 pt-6 pb-2"
          data-slot="dialog-header"
        >
          <div
            class="text-lg leading-none font-semibold"
            data-slot="dialog-title"
            data-testid="mock-react-dialog-title"
          >
            Vorlage Anwenden
          </div>
          <p
            class="text-sm font-semibold text-muted-foreground"
          >
            title 1
          </p>
        </div>
        <div
          class="flex flex-1 flex-col overflow-y-auto"
        >
          <form
            class="flex flex-1 flex-col px-6"
            data-testid="prompt-from-template"
          >
            <div
              class="grid flex-1 grid-cols-1 gap-6 lg:min-h-[40vh] lg:grid-cols-2"
            >
              <div
                class="flex min-h-0 flex-1 flex-col gap-2"
                data-testid="template-preview"
              >
                <div
                  class="group relative flex-1 overflow-y-auto rounded-md border bg-muted/30 p-4"
                >
                  <button
                    class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 size-8 cursor-pointer absolute top-2 right-2 opacity-0 transition-opacity group-hover:opacity-100"
                    data-slot="tooltip-trigger"
                    data-state="closed"
                    data-testid="copy-preview-btn"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-copy h-3.5 w-3.5"
                      data-testid="copy-icon"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <rect
                        height="14"
                        rx="2"
                        ry="2"
                        width="14"
                        x="8"
                        y="8"
                      />
                      <path
                        d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
                      />
                    </svg>
                  </button>
                  <div
                    data-testid="mock-react-presence"
                  >
                    <div
                      data-testid="mock-react-portal"
                    >
                      <div
                        data-testid="mock-react-presence"
                      >
                        <div
                          data-radix-popper-content-wrapper=""
                          style="position: fixed; left: 0px; top: 0px; transform: translate(0px, 0px); min-width: max-content; --radix-popper-available-width: -16px; --radix-popper-available-height: 0px; --radix-popper-anchor-width: 0px; --radix-popper-anchor-height: 0px; --radix-popper-transform-origin: 0px 0px;"
                        >
                          <div
                            class="bg-foreground text-background animate-in fade-in-0 zoom-in-95 data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=closed]:zoom-out-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2 z-50 w-fit origin-(--radix-tooltip-content-transform-origin) rounded-md px-3 py-1.5 text-xs text-balance"
                            data-align="center"
                            data-side="top"
                            data-slot="tooltip-content"
                            data-state="closed"
                            style="--radix-tooltip-content-transform-origin: var(--radix-popper-transform-origin); --radix-tooltip-content-available-width: var(--radix-popper-available-width); --radix-tooltip-content-available-height: var(--radix-popper-available-height); --radix-tooltip-trigger-width: var(--radix-popper-anchor-width); --radix-tooltip-trigger-height: var(--radix-popper-anchor-height);"
                          >
                            In Zwischenablage kopieren
                            <span
                              style="position: absolute; bottom: 0px; transform: translateY(100%); left: 0px;"
                            >
                              <svg
                                class="bg-foreground fill-foreground z-50 size-2.5 translate-y-[calc(-50%_-_2px)] rotate-45 rounded-[2px]"
                                height="5"
                                preserveAspectRatio="none"
                                style="display: block;"
                                viewBox="0 0 30 10"
                                width="10"
                              >
                                <polygon
                                  points="0,0 30,0 15,10"
                                />
                              </svg>
                            </span>
                            <span
                              id="radix-_r_h_"
                              role="tooltip"
                              style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
                            >
                              In Zwischenablage kopieren
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="leading-relaxed text-slate-700"
                    data-testid="preview"
                  >
                    <div
                      class="text-slate-700 leading-relaxed"
                      data-testid="react-md"
                    >
                      <div
                        data-testid="react-markdown-mock"
                      >
                        content 1
                      </div>
                    </div>
                  </div>
                </div>
                <p
                  class="text-xs text-muted-foreground"
                >
                  <span
                    class="mr-1 inline-block rounded bg-orange-100 px-1 text-orange-700 italic"
                  >
                    {{platzhalter}}
                  </span>
                  noch nicht ausgefüllt ·
                   
                  <span
                    class="mr-1 inline-block rounded bg-green-100 px-1 font-medium text-green-800"
                  >
                    wert
                  </span>
                  ausgefüllt
                </p>
              </div>
              <div
                class="space-y-4"
                data-testid="template-fields-form"
              />
            </div>
            <div
              class="sticky bottom-0 flex items-center justify-end gap-2 bg-background py-4"
            >
              <div
                data-slot="dropdown-menu"
                data-testid="mock-react-dropdown-menu-root"
              >
                <button
                  class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-8 rounded-md px-3 has-[>svg]:px-2.5 cursor-pointer gap-1.5"
                  data-slot="dropdown-menu-trigger"
                  data-testid="open-in-ai-btn"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-external-link h-4 w-4"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M15 3h6v6"
                    />
                    <path
                      d="M10 14 21 3"
                    />
                    <path
                      d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
                    />
                  </svg>
                  Öffnen In
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-chevron-down h-3.5 w-3.5 opacity-60"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m6 9 6 6 6-6"
                    />
                  </svg>
                </button>
                <div
                  data-testid="mock-react-dropdown-menu-portal"
                />
              </div>
              <button
                class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 cursor-pointer"
                data-slot="tooltip-trigger"
                data-state="closed"
                data-testid="copy-prompt-btn"
                type="submit"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-copy size-4"
                  data-testid="copy-icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    height="14"
                    rx="2"
                    ry="2"
                    width="14"
                    x="8"
                    y="8"
                  />
                  <path
                    d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
                  />
                </svg>
                <span>
                  Kopieren
                </span>
              </button>
              <div
                data-testid="mock-react-presence"
              >
                <div
                  data-testid="mock-react-portal"
                >
                  <div
                    data-testid="mock-react-presence"
                  >
                    <div
                      data-radix-popper-content-wrapper=""
                      style="position: fixed; left: 0px; top: 0px; transform: translate(0px, 0px); min-width: max-content; --radix-popper-available-width: -16px; --radix-popper-available-height: 0px; --radix-popper-anchor-width: 0px; --radix-popper-anchor-height: 0px; --radix-popper-transform-origin: 0px 0px;"
                    >
                      <div
                        class="bg-foreground text-background animate-in fade-in-0 zoom-in-95 data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=closed]:zoom-out-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2 z-50 w-fit origin-(--radix-tooltip-content-transform-origin) rounded-md px-3 py-1.5 text-xs text-balance"
                        data-align="center"
                        data-side="top"
                        data-slot="tooltip-content"
                        data-state="closed"
                        style="--radix-tooltip-content-transform-origin: var(--radix-popper-transform-origin); --radix-tooltip-content-available-width: var(--radix-popper-available-width); --radix-tooltip-content-available-height: var(--radix-popper-available-height); --radix-tooltip-trigger-width: var(--radix-popper-anchor-width); --radix-tooltip-trigger-height: var(--radix-popper-anchor-height);"
                      >
                        In Zwischenablage kopieren
                        <span
                          style="position: absolute; bottom: 0px; transform: translateY(100%); left: 0px;"
                        >
                          <svg
                            class="bg-foreground fill-foreground z-50 size-2.5 translate-y-[calc(-50%_-_2px)] rotate-45 rounded-[2px]"
                            height="5"
                            preserveAspectRatio="none"
                            style="display: block;"
                            viewBox="0 0 30 10"
                            width="10"
                          >
                            <polygon
                              points="0,0 30,0 15,10"
                            />
                          </svg>
                        </span>
                        <span
                          id="radix-_r_i_"
                          role="tooltip"
                          style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
                        >
                          In Zwischenablage kopieren
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`UseTemplateDialog rendering tests mode fields-form - hasFeilds true - test 1`] = `
<div>
  <div
    data-slot="dialog"
    data-testid="use-template-dialog"
  >
    <div
      data-slot="dialog-portal"
      data-testid="mock-react-dialog-portal"
    >
      <div
        class="data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 fixed inset-0 z-50 bg-black/50"
        data-slot="dialog-overlay"
        data-testid="mock-react-dialog-overlay"
      />
      <div
        class="bg-background data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 fixed top-[50%] left-[50%] z-50 w-full max-w-[calc(100%-2rem)] translate-x-[-50%] translate-y-[-50%] rounded-lg border shadow-lg flex flex-col gap-0 overflow-hidden p-0 transition-all duration-200 max-h-[90vh] sm:max-w-5xl"
        data-slot="dialog-content"
        data-testid="mock-react-dialog-content"
      >
        <button
          class="absolute top-4 right-12 cursor-pointer rounded-sm bg-background px-2 py-2 hover:bg-accent"
          data-testid="expand-btn"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-maximize2 lucide-maximize-2 h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 3h6v6"
            />
            <path
              d="m21 3-7 7"
            />
            <path
              d="m3 21 7-7"
            />
            <path
              d="M9 21H3v-6"
            />
          </svg>
        </button>
        <button
          class="absolute top-4 right-4 cursor-pointer rounded-sm bg-background px-2 py-2 hover:bg-accent"
          data-testid="close-btn"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-x h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
        </button>
        <div
          class="flex flex-col gap-2 text-center sm:text-left shrink-0 px-6 pt-6 pb-2"
          data-slot="dialog-header"
        >
          <div
            class="text-lg leading-none font-semibold"
            data-slot="dialog-title"
            data-testid="mock-react-dialog-title"
          >
            Vorlage Felder Ausfüllen
          </div>
          <p
            class="text-sm font-semibold text-muted-foreground"
          >
            title 1
          </p>
        </div>
        <div
          class="flex flex-1 flex-col overflow-y-auto"
        >
          <form
            class="flex flex-1 flex-col px-6"
            data-testid="prompt-from-template"
          >
            <div
              class="grid flex-1 grid-cols-1 gap-6 lg:min-h-[40vh] lg:grid-cols-2"
            >
              <div
                class="flex min-h-0 flex-1 flex-col gap-2"
                data-testid="template-preview"
              >
                <div
                  class="group relative flex-1 overflow-y-auto rounded-md border bg-muted/30 p-4"
                >
                  <button
                    class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 size-8 cursor-pointer absolute top-2 right-2 opacity-0 transition-opacity group-hover:opacity-100"
                    data-slot="tooltip-trigger"
                    data-state="closed"
                    data-testid="copy-preview-btn"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-copy h-3.5 w-3.5"
                      data-testid="copy-icon"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <rect
                        height="14"
                        rx="2"
                        ry="2"
                        width="14"
                        x="8"
                        y="8"
                      />
                      <path
                        d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
                      />
                    </svg>
                  </button>
                  <div
                    data-testid="mock-react-presence"
                  >
                    <div
                      data-testid="mock-react-portal"
                    >
                      <div
                        data-testid="mock-react-presence"
                      >
                        <div
                          data-radix-popper-content-wrapper=""
                          style="position: fixed; left: 0px; top: 0px; transform: translate(0px, 0px); min-width: max-content; --radix-popper-available-width: -16px; --radix-popper-available-height: 0px; --radix-popper-anchor-width: 0px; --radix-popper-anchor-height: 0px; --radix-popper-transform-origin: 0px 0px;"
                        >
                          <div
                            class="bg-foreground text-background animate-in fade-in-0 zoom-in-95 data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=closed]:zoom-out-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2 z-50 w-fit origin-(--radix-tooltip-content-transform-origin) rounded-md px-3 py-1.5 text-xs text-balance"
                            data-align="center"
                            data-side="top"
                            data-slot="tooltip-content"
                            data-state="closed"
                            style="--radix-tooltip-content-transform-origin: var(--radix-popper-transform-origin); --radix-tooltip-content-available-width: var(--radix-popper-available-width); --radix-tooltip-content-available-height: var(--radix-popper-available-height); --radix-tooltip-trigger-width: var(--radix-popper-anchor-width); --radix-tooltip-trigger-height: var(--radix-popper-anchor-height);"
                          >
                            In Zwischenablage kopieren
                            <span
                              style="position: absolute; bottom: 0px; transform: translateY(100%); left: 0px;"
                            >
                              <svg
                                class="bg-foreground fill-foreground z-50 size-2.5 translate-y-[calc(-50%_-_2px)] rotate-45 rounded-[2px]"
                                height="5"
                                preserveAspectRatio="none"
                                style="display: block;"
                                viewBox="0 0 30 10"
                                width="10"
                              >
                                <polygon
                                  points="0,0 30,0 15,10"
                                />
                              </svg>
                            </span>
                            <span
                              id="radix-_r_0_"
                              role="tooltip"
                              style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
                            >
                              In Zwischenablage kopieren
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="leading-relaxed text-slate-700"
                    data-testid="preview"
                  >
                    <div
                      class="text-slate-700 leading-relaxed"
                      data-testid="react-md"
                    >
                      <div
                        data-testid="react-markdown-mock"
                      >
                        content 1
                      </div>
                    </div>
                  </div>
                </div>
                <p
                  class="text-xs text-muted-foreground"
                >
                  <span
                    class="mr-1 inline-block rounded bg-orange-100 px-1 text-orange-700 italic"
                  >
                    {{platzhalter}}
                  </span>
                  noch nicht ausgefüllt ·
                   
                  <span
                    class="mr-1 inline-block rounded bg-green-100 px-1 font-medium text-green-800"
                  >
                    wert
                  </span>
                  ausgefüllt
                </p>
              </div>
              <div
                class="space-y-4"
                data-testid="template-fields-form"
              >
                <div>
                  <div
                    class="grid gap-2"
                    data-slot="form-item"
                    data-testid="field_0"
                  >
                    <label
                      class="flex items-center text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive gap-1"
                      data-error="false"
                      data-slot="form-label"
                      for="_r_1_-form-item"
                    >
                      label 0
                      <span
                        class="text-destructive"
                      >
                        *
                      </span>
                    </label>
                    <p
                      class="text-muted-foreground text-sm"
                      data-slot="form-description"
                      id="_r_1_-form-item-description"
                    >
                       
                      description 0
                    </p>
                    <button
                      aria-autocomplete="none"
                      aria-controls="radix-_r_2_"
                      aria-describedby="_r_1_-form-item-description"
                      aria-expanded="false"
                      aria-invalid="false"
                      class="border-input data-[placeholder]:text-muted-foreground [&_svg:not([class*='text-'])]:text-muted-foreground focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 dark:hover:bg-input/50 flex items-center justify-between gap-2 rounded-md border bg-transparent px-3 py-2 text-sm whitespace-nowrap shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 data-[size=default]:h-9 data-[size=sm]:h-8 *:data-[slot=select-value]:line-clamp-1 *:data-[slot=select-value]:flex *:data-[slot=select-value]:items-center *:data-[slot=select-value]:gap-2 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 w-full"
                      data-size="default"
                      data-slot="form-control"
                      data-state="closed"
                      dir="ltr"
                      id="_r_1_-form-item"
                      role="combobox"
                      type="button"
                    >
                      <span
                        data-slot="select-value"
                        style="pointer-events: none;"
                      >
                        option 1
                      </span>
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-chevron-down size-4 opacity-50"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m6 9 6 6 6-6"
                        />
                      </svg>
                    </button>
                    <div
                      data-testid="mock-react-portal"
                    />
                    <select
                      aria-hidden="true"
                      style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
                      tabindex="-1"
                    >
                      <option
                        selected=""
                        value="option 1"
                      >
                        option 1
                      </option>
                      <option
                        value="option 2"
                      >
                        option 2
                      </option>
                      <option
                        value="option 3"
                      >
                        option 3
                      </option>
                    </select>
                  </div>
                </div>
                <div>
                  <div
                    class="grid gap-2"
                    data-slot="form-item"
                    data-testid="field_1"
                  >
                    <label
                      class="flex items-center text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive gap-1"
                      data-error="false"
                      data-slot="form-label"
                      for="_r_3_-form-item"
                    >
                      label 1
                      <span
                        class="text-destructive"
                      >
                        *
                      </span>
                    </label>
                    <p
                      class="text-muted-foreground text-sm"
                      data-slot="form-description"
                      id="_r_3_-form-item-description"
                    >
                       
                      description 1
                    </p>
                    <button
                      aria-autocomplete="none"
                      aria-controls="radix-_r_4_"
                      aria-describedby="_r_3_-form-item-description"
                      aria-expanded="false"
                      aria-invalid="false"
                      class="border-input data-[placeholder]:text-muted-foreground [&_svg:not([class*='text-'])]:text-muted-foreground focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 dark:hover:bg-input/50 flex items-center justify-between gap-2 rounded-md border bg-transparent px-3 py-2 text-sm whitespace-nowrap shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 data-[size=default]:h-9 data-[size=sm]:h-8 *:data-[slot=select-value]:line-clamp-1 *:data-[slot=select-value]:flex *:data-[slot=select-value]:items-center *:data-[slot=select-value]:gap-2 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 w-full"
                      data-size="default"
                      data-slot="form-control"
                      data-state="closed"
                      dir="ltr"
                      id="_r_3_-form-item"
                      role="combobox"
                      type="button"
                    >
                      <span
                        data-slot="select-value"
                        style="pointer-events: none;"
                      >
                        option 1
                      </span>
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-chevron-down size-4 opacity-50"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m6 9 6 6 6-6"
                        />
                      </svg>
                    </button>
                    <div
                      data-testid="mock-react-portal"
                    />
                    <select
                      aria-hidden="true"
                      style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
                      tabindex="-1"
                    >
                      <option
                        selected=""
                        value="option 1"
                      >
                        option 1
                      </option>
                      <option
                        value="option 2"
                      >
                        option 2
                      </option>
                      <option
                        value="option 3"
                      >
                        option 3
                      </option>
                    </select>
                  </div>
                </div>
                <div>
                  <div
                    class="grid gap-2"
                    data-slot="form-item"
                    data-testid="field_2"
                  >
                    <label
                      class="flex items-center text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive gap-1"
                      data-error="false"
                      data-slot="form-label"
                      for="_r_5_-form-item"
                    >
                      label 2
                      <span
                        class="text-destructive"
                      >
                        *
                      </span>
                    </label>
                    <p
                      class="text-muted-foreground text-sm"
                      data-slot="form-description"
                      id="_r_5_-form-item-description"
                    >
                       
                      description 2
                    </p>
                    <button
                      aria-autocomplete="none"
                      aria-controls="radix-_r_6_"
                      aria-describedby="_r_5_-form-item-description"
                      aria-expanded="false"
                      aria-invalid="false"
                      class="border-input data-[placeholder]:text-muted-foreground [&_svg:not([class*='text-'])]:text-muted-foreground focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 dark:hover:bg-input/50 flex items-center justify-between gap-2 rounded-md border bg-transparent px-3 py-2 text-sm whitespace-nowrap shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 data-[size=default]:h-9 data-[size=sm]:h-8 *:data-[slot=select-value]:line-clamp-1 *:data-[slot=select-value]:flex *:data-[slot=select-value]:items-center *:data-[slot=select-value]:gap-2 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 w-full"
                      data-size="default"
                      data-slot="form-control"
                      data-state="closed"
                      dir="ltr"
                      id="_r_5_-form-item"
                      role="combobox"
                      type="button"
                    >
                      <span
                        data-slot="select-value"
                        style="pointer-events: none;"
                      >
                        option 1
                      </span>
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-chevron-down size-4 opacity-50"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m6 9 6 6 6-6"
                        />
                      </svg>
                    </button>
                    <div
                      data-testid="mock-react-portal"
                    />
                    <select
                      aria-hidden="true"
                      style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
                      tabindex="-1"
                    >
                      <option
                        selected=""
                        value="option 1"
                      >
                        option 1
                      </option>
                      <option
                        value="option 2"
                      >
                        option 2
                      </option>
                      <option
                        value="option 3"
                      >
                        option 3
                      </option>
                    </select>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="sticky bottom-0 flex items-center justify-end gap-2 bg-background py-4"
            >
              <div
                data-slot="dropdown-menu"
                data-testid="mock-react-dropdown-menu-root"
              >
                <button
                  class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-8 rounded-md px-3 has-[>svg]:px-2.5 cursor-pointer gap-1.5"
                  data-slot="dropdown-menu-trigger"
                  data-testid="open-in-ai-btn"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-external-link h-4 w-4"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M15 3h6v6"
                    />
                    <path
                      d="M10 14 21 3"
                    />
                    <path
                      d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
                    />
                  </svg>
                  Öffnen In
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-chevron-down h-3.5 w-3.5 opacity-60"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m6 9 6 6 6-6"
                    />
                  </svg>
                </button>
                <div
                  data-testid="mock-react-dropdown-menu-portal"
                />
              </div>
              <button
                class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 cursor-pointer"
                data-slot="tooltip-trigger"
                data-state="closed"
                data-testid="copy-prompt-btn"
                type="submit"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-copy size-4"
                  data-testid="copy-icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    height="14"
                    rx="2"
                    ry="2"
                    width="14"
                    x="8"
                    y="8"
                  />
                  <path
                    d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
                  />
                </svg>
                <span>
                  Kopieren
                </span>
              </button>
              <div
                data-testid="mock-react-presence"
              >
                <div
                  data-testid="mock-react-portal"
                >
                  <div
                    data-testid="mock-react-presence"
                  >
                    <div
                      data-radix-popper-content-wrapper=""
                      style="position: fixed; left: 0px; top: 0px; transform: translate(0px, 0px); min-width: max-content; --radix-popper-available-width: -16px; --radix-popper-available-height: 0px; --radix-popper-anchor-width: 0px; --radix-popper-anchor-height: 0px; --radix-popper-transform-origin: 0px 0px;"
                    >
                      <div
                        class="bg-foreground text-background animate-in fade-in-0 zoom-in-95 data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=closed]:zoom-out-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2 z-50 w-fit origin-(--radix-tooltip-content-transform-origin) rounded-md px-3 py-1.5 text-xs text-balance"
                        data-align="center"
                        data-side="top"
                        data-slot="tooltip-content"
                        data-state="closed"
                        style="--radix-tooltip-content-transform-origin: var(--radix-popper-transform-origin); --radix-tooltip-content-available-width: var(--radix-popper-available-width); --radix-tooltip-content-available-height: var(--radix-popper-available-height); --radix-tooltip-trigger-width: var(--radix-popper-anchor-width); --radix-tooltip-trigger-height: var(--radix-popper-anchor-height);"
                      >
                        In Zwischenablage kopieren
                        <span
                          style="position: absolute; bottom: 0px; transform: translateY(100%); left: 0px;"
                        >
                          <svg
                            class="bg-foreground fill-foreground z-50 size-2.5 translate-y-[calc(-50%_-_2px)] rotate-45 rounded-[2px]"
                            height="5"
                            preserveAspectRatio="none"
                            style="display: block;"
                            viewBox="0 0 30 10"
                            width="10"
                          >
                            <polygon
                              points="0,0 30,0 15,10"
                            />
                          </svg>
                        </span>
                        <span
                          id="radix-_r_7_"
                          role="tooltip"
                          style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
                        >
                          In Zwischenablage kopieren
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;
